misc fixes, collapse

--- a/css/partials/_layouts.scss
+++ b/css/partials/_layouts.scss
@@ -72,7 +72,7 @@ position:relative;
 	left:17em;
 	border-bottom: 5px solid $darkFaded;
 	border-right: 5px solid $darkFaded;
-	-ms-transform: rotate(45deg); /* IE 9 */
+		-ms-transform: rotate(45deg); /* IE 9 */
     -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
     transform: rotate(45deg);
 }
@@ -102,14 +102,17 @@ position:relative;
 	width:100%;
 	z-index:15;
 }
-
 .bottom-panel{
 	position:absolute;
 	bottom:0;
 	width:100%;
-	height:50%;
+
+	transition: all 300ms;
 
 	z-index:14;
 
-	background:$dark;
+	background:fade-out($dark, .25);
+}
+.bottom-expand{
+	height:100%;
 }
